[tool.poetry]
name = "typer-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
t11l = "typer_tutorial.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.0"
click = "^8.0.4"
colorama = "^0.4.4"
shellingham = "^1.4.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
rope = "^0.23.0"
pytest = "^7.0.1"

[tool.black]
skip-string-normalization = true
line-length = 120
target-version = ['py39']

[tool.flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
